--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-/* CSS files add styling rules to your content */
-
-body {
-  font-family: helvetica, arial, sans-serif;
-  margin: 2em;
+* {
+  padding : 0;
+  margin : 0;
+  box-sizing : border-box;
 }
 
-h1 {
-  font-style: italic;
-  color: #373fff;
+body {
+  height : 100vh;
+  background : #060AB2;
 }
