--- a/style.css
+++ b/style.css
@@ -21,10 +21,15 @@ body {
   border : 2px solid aqua;
   width : 25%;
   height : 33.33%
+  position : relative;
 }
 
 .front-face,
 .back-face{
+  position : absolute;
+  width : 100%;
+  height : 100%;
+  
   border : 2px solid deeppink;
 }
 
