--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 * {
-  padding : 0;
-  margin : 0;
-  box-sizing : border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
   height : 100vh;
+  display : flex;
   background : #060AB2;
 }
 
@@ -14,7 +15,7 @@ body {
   height : 640px;
   display : flex;
   flex-wrap : wrap;
-  border : 2px solid lime;
+  margin: auto;
 }
 
 .memory-card{
