--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
 body {
   height : 100vh;
   display : flex;
-  background : #060AB2;
+  background : deeppink;
 }
 
 .memory-game {
-  width : 640px;
-  height : 640px;
+  width : 600px;
+  height : 600px;
   display : flex;
   flex-wrap : wrap;
   margin: auto;
@@ -39,7 +39,7 @@ body {
   height : 100%;
   padding : 10px;
   bborder-radius: 5px;
-  background: ;
+  background: green;
 }
 
 
