--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   display : flex;
   flex-wrap : wrap;
   margin: auto;
+  perspective : 1000px;
 }
 
 .memory-card{
@@ -25,11 +26,17 @@ body {
   position : relative;
   transform: scale(1);
   box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+  transform-style : preserve-3d;
+  transition : transform.5s;
 }
 
 .memory-card:active {
   transform: scale(0.97);
   transition: transform .2s;
+}
+
+.memory-card.flip {
+  transform : rotateY(180deg);
 }
 
 .front-face,
@@ -40,7 +47,9 @@ body {
   padding : 10px;
   bborder-radius: 5px;
   background: green;
+  backface-visibility : hidden;
 }
+
 
 
 
